# interview-system-v2

./: .dockerignore  .env.example  .gitignore  2026-02-16-jtbd-ontology-optimization-extraction.md  CHANGELOG.md  CLAUDE.md  Dockerfile  ENGINEERING_GUIDE.md  IMPLEMENTATION_PLAN.md  README.md  arch_queries.md  arch_queries_report.md  claude.md  commands.md  entrypoint.sh  progress.json  pyproject.toml  session_05a609ac.json  session_66096160.json  session_681fc22a.json  session_caf206dd.json  test01.txt
.beads/: issues.jsonl
.codegraph/: index.faiss  index.ids  symbols.db
.streamlit/: config.toml
config/: interview_config.yaml  scoring.yaml  testing_plan.md  testing_plan_tier-1.md  testing_plan_tier-2-3.md  testing_plan_tier2.md
data/: interview.db-shm  interview.db-wal  interview.db.backup  phase5_quality_review_raw.json
docs/: 20260219_codegrapher_report.md  API.md  DEVELOPMENT.md  NodeStateTracker_mutation.md  PERFORMANCE.md  SYSTEM_DESIGN.md  architecture_diagram.md  canonical_extraction.md  concept_system.md  data_flow_diagram.md  data_flow_paths.md  data_flow_paths.md.backup  deepen_strategy_analysis.md  error_handling_checklist.md  extraction_and_graphs.md  interview_ai_simulation.md  logging_standards.md  pipeline-contracts-status.md  pipeline_contracts.md  signal_architecture_analysis.md  signals_and_strategies.md  signals_moderator_guide.md  synthetic_personas.md  ui-framework-decision.md
interviews_synthetic/: oat_milk_v2_health_conscious_20260129_230829.json  oat_milk_v2_health_conscious_20260129_231742.json  oat_milk_v2_health_conscious_20260129_232037.json
scripts/: README.md  analyze_latest_log.py  analyze_similarity_distribution.py  benchmark.py  check_logging.py  clean_sessions.py  compare_extraction_metrics.py  deploy_cloud_run.sh  fix-specs.sh  generate_mermaid_graph.py  generate_scoring_csv.py  ralph-phase1-auto.sh  rebuild_database.py  review_canonical_slots.py  run_e2e_tests.sh  run_simulation.py  (+2 more)
(+579 files in other folders)
